--- a/src/components/todos/Todolist.module.css
+++ b/src/components/todos/Todolist.module.css
@@ -7,7 +7,7 @@
   text-align: center;
   font-size: 40px;
   font-weight: 800;
-  color: rgb(32, 195, 227);
+  color: rgb(34, 142, 164);
   margin: 40px;
 }
 
@@ -16,7 +16,7 @@
   display: flex;
   text-align: center;
   width: 80%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .inputbox input {
@@ -57,6 +57,7 @@
 .done {
   display: flex;
   text-decoration: line-through;
+  color: gray;
 }
 
 .done input {
